Cycles crashes when rendering the attached file with CPU #31806

Closed
opened 2012-06-12 22:46:20 +02:00 by Fabio Massaioli · 8 comments

%%%GPU rendering goes fine, CPU rendering crashes blender on official release and gives a strange result on svn r47792.

Output on crash (official release):
blender: intern/cycles/kernel/svm/svm.h:52: ccl::float3 ccl::stack_load_float3(float*, ccl::uint): Assertion `a+2 < 255' failed.
Aborted (core dumped)

Attached files: Blend file with packed textures, GPU rendering, CPU rendering on SVN version

CPU: Intel Core i5-2410M
RAM: 4.7 GB
GFX: nVidia Geforce GT540M
OS: Ubuntu 12.04
Drivers: official drivers 295.40
Blender: 2.63a official release / 2.63 SVN 47792%%%

%%%GPU rendering goes fine, CPU rendering crashes blender on official release and gives a strange result on svn r47792. Output on crash (official release): blender: intern/cycles/kernel/svm/svm.h:52: ccl::float3 ccl::stack_load_float3(float*, ccl::uint): Assertion `a+2 < 255' failed. Aborted (core dumped) Attached files: Blend file with packed textures, GPU rendering, CPU rendering on SVN version CPU: Intel Core i5-2410M RAM: 4.7 GB GFX: nVidia Geforce GT540M OS: Ubuntu 12.04 Drivers: official drivers 295.40 Blender: 2.63a official release / 2.63 SVN 47792%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%The problem is the "Add shader" node. Select it and hit Ctrl+X, then render with the cpu.%%%

%%%The problem is the "Add shader" node. Select it and hit Ctrl+X, then render with the cpu.%%%

%%%can not actually reproduce the issue here, probably this worth double-checking using fresh builds from builder.blender.org.

Brecht, can you please keep an eye on this?%%%

%%%can not actually reproduce the issue here, probably this worth double-checking using fresh builds from builder.blender.org. Brecht, can you please keep an eye on this?%%%

%%%Confirmed with debug build, will fix.%%%

%%%Confirmed with debug build, will fix.%%%

%%%Reconfirmed with 2.64 RC1, GPU (CUDA) and CPU render are different. %%%

%%%Reconfirmed with 2.64 RC1, GPU (CUDA) and CPU render are different. %%%

%%%Same here with the build r50990,

The problem concerned the nested "mixshader" node, I removed the effect and replace it by another trick, it now works%%%

%%%Same here with the build r50990, The problem concerned the nested "mixshader" node, I removed the effect and replace it by another trick, it now works%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31806
No description provided.