Fix #31806: cycles crash rendering a particular node setup with multiple mix/add shader nodes.